[gd_scene load_steps=6 format=1]

[ext_resource path="res://Enemies/soldier.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Enemy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 1, 16 )

[sub_resource type="Animation" id=2]

resource/name = "Walk"
length = 0.4
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Legs:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 32, 32, 16 ), Rect2( 32, 32, 32, 16 ), Rect2( 64, 32, 32, 16 ), Rect2( 32, 32, 32, 16 ), Rect2( 0, 32, 32, 16 ) ]
}

[node name="Soldier" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
direction = 0
speed = 100
hp = 10
bullet = "res://Projectiles/turret_pistol.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Legs" type="Sprite" parent="."]

texture = ExtResource( 2 )
offset = Vector2( 0, 8 )
region = true
region_rect = Rect2( 0, 32, 32, 16 )

[node name="Torso" type="Sprite" parent="."]

texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Arm" type="Sprite" parent="."]

transform/pos = Vector2( 0, -5 )
transform/rot = 90.0
texture = ExtResource( 2 )
offset = Vector2( 0, 6 )
region = true
region_rect = Rect2( 40, 8, 16, 16 )

[node name="ShotPos" type="Position2D" parent="Arm"]

transform/pos = Vector2( 0, 16 )

[node name="RWallCheck" type="Area2D" parent="."]

transform/pos = Vector2( 5, 0 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RWallCheck"]

shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="LWallCheck" type="Area2D" parent="."]

transform/pos = Vector2( -5, 0 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LWallCheck"]

shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="ShotTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="RRaycast" type="RayCast2D" parent="."]

transform/pos = Vector2( 7, -11 )
enabled = true
cast_to = Vector2( 64, 0 )
layer_mask = 1
type_mask = 3

[node name="LRaycast" type="RayCast2D" parent="."]

transform/pos = Vector2( -7, -11 )
enabled = true
cast_to = Vector2( -64, 0 )
layer_mask = 1
type_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Walk = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


